# mimic_the_mimicgen

./: .gitignore  MOTIVATION_FIGURES.md  MOTIVATION_INITIAL_CONDITION.md  Motivation_E2_Policy_Results.md  Motivation_Extended_Tasks.md  README.md
integration/: .gitignore  README.md  pyproject.toml
integration/configs/: cpgen_gear_assembly.yaml  sart_peg_in_hole.yaml
integration/examples/: run_cpgen_generate.py  run_sart_augment.py
integration/media/: .gitignore  README.md
integration/mimicgen_substrate/: README.md
integration/synthgen/: __init__.py  cpgen_transform.py  curobo_backend.py  data_schema.py  interfaces.py  isaaclab_env.py  math_utils.py  mocks.py  pipeline.py  runtime.py  sart_augmentor.py  skills.py
integration/tests/: test_smoke.py
motivation/: ARCHITECTURE.md  PLAN.md  README.md  TASKS.md  conftest.py  pyproject.toml
motivation/genaudit/: __init__.py  __main__.py  cli.py  config.py
motivation/scripts/: b0_audit_phase0_pools.py  b0_prepare_sources.sh  b1_generate_pool.sh  b1_reachability_probe.py  b1_run_all_probes.py  b2_run_pools.py  c_eval_task.py  c_make_frozen_resets.py  c_make_train_configs.py  c_prepare_arms.py  c_train_all.py  c_train_launch.sh  e1_contrast_overlay.py  e1_run_sweep.py  mnew_addseeds.py  mnew_armdist.py  mnew_arms.py  mnew_deval.py  mnew_eval.py  mnew_extract.py  mnew_farbin.py  mnew_farbin_run.sh  mnew_finish.sh  mnew_generate.py  mnew_merge.py  mnew_quantile.py  mnew_seeds.sh  mnew_setup_train.sh  render_region_overlays.py
motivation/tests/: test_analysis_and_stratify.py  test_binning.py  test_bounds.py  (+8 more)
(+155 files in other folders)
